prooflink/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prooflink
  labels:
    name: prooflink
    environment: production
    app: prooflink-ai
